# pyshoper

./: Pipfile  README.md  pyproject.toml
pyshoper/: __init__.py
